--- a/DeepLearningDemo.MarioKart/packages.config
+++ b/DeepLearningDemo.MarioKart/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CNTK.CPUOnly" version="2.5.1" targetFramework="net461" />
+  <package id="CNTK.Deps.MKL" version="2.5.1" targetFramework="net461" />
+  <package id="CNTK.Deps.OpenCV.Zip" version="2.5.1" targetFramework="net461" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
+  <package id="InputSimulatorPlus" version="1.0.7" targetFramework="net461" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
