start work on lstm training and clean digit recognizer demo

--- a/DeepLearningDemo.MarioKart/packages.config
+++ b/DeepLearningDemo.MarioKart/packages.config
@@ -3,6 +3,7 @@
   <package id="CNTK.CPUOnly" version="2.5.1" targetFramework="net461" />
   <package id="CNTK.Deps.MKL" version="2.5.1" targetFramework="net461" />
   <package id="CNTK.Deps.OpenCV.Zip" version="2.5.1" targetFramework="net461" />
+  <package id="CNTK.FSharp" version="0.1.4" targetFramework="net461" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="InputSimulatorPlus" version="1.0.7" targetFramework="net461" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
