add train chart and update nuget packages

--- a/DeepLearningDemo.DigitRecognizer/packages.config
+++ b/DeepLearningDemo.DigitRecognizer/packages.config
@@ -4,4 +4,6 @@
   <package id="CNTK.Deps.MKL" version="2.5.1" targetFramework="net461" />
   <package id="CNTK.Deps.OpenCV.Zip" version="2.5.1" targetFramework="net461" />
   <package id="CNTK.FSharp" version="0.1.4" targetFramework="net461" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
 </packages>
