--- a/DeepLearningDemo.MarioKart/packages.config
+++ b/DeepLearningDemo.MarioKart/packages.config
@@ -6,11 +6,8 @@
   <package id="CNTK.FSharp" version="0.1.4" targetFramework="net461" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="InputSimulatorPlus" version="1.0.7" targetFramework="net461" />
-  <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
-  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
-  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
-  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net461" />
-  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net461" />
-  <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net461" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
+  <package id="System.Reactive" version="4.0.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
