--- a/DeepLearningDemo.DigitRecognizer/packages.config
+++ b/DeepLearningDemo.DigitRecognizer/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CNTK.CPUOnly" version="2.5.1" targetFramework="net461" />
+  <package id="CNTK.Deps.Cuda" version="2.5.1" targetFramework="net461" />
+  <package id="CNTK.Deps.cuDNN" version="2.5.1" targetFramework="net461" />
   <package id="CNTK.Deps.MKL" version="2.5.1" targetFramework="net461" />
   <package id="CNTK.Deps.OpenCV.Zip" version="2.5.1" targetFramework="net461" />
-  <package id="CNTK.FSharp" version="0.1.4" targetFramework="net461" />
+  <package id="CNTK.FSharp" version="0.1.5" targetFramework="net461" />
+  <package id="CNTK.GPU" version="2.5.1" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
+  <package id="System.Reactive" version="4.0.0" targetFramework="net461" />
 </packages>
