--- a/DeepLearningDemo.DigitRecognier.NeuralNetwork/DeepLearningDemo.DigitRecognier.NeuralNetwork.fsproj
+++ b/DeepLearningDemo.DigitRecognier.NeuralNetwork/DeepLearningDemo.DigitRecognier.NeuralNetwork.fsproj
@@ -11,7 +11,6 @@
     <AssemblyName>DeepLearning.DigitRecognier.NeuralNetwork</AssemblyName>
     <UseStandardResourceNames>true</UseStandardResourceNames>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <TargetFSharpCoreVersion>4.4.3.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Name>DeepLearningDemo.DigitRecognier.NeuralNetwork</Name>
     <NuGetPackageImportStamp>
@@ -88,12 +87,10 @@
     <Reference Include="CNTK.FSharp">
       <HintPath>..\packages\CNTK.FSharp.0.1.5\lib\CNTK.FSharp.dll</HintPath>
     </Reference>
-    <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core">
-      <Name>FSharp.Core</Name>
-      <AssemblyName>FSharp.Core.dll</AssemblyName>
-      <HintPath>$(MSBuildProgramFiles32)\Reference Assemblies\Microsoft\FSharp\.NETFramework\v4.0\$(TargetFSharpCoreVersion)\FSharp.Core.dll</HintPath>
+      <HintPath>..\packages\FSharp.Core.4.6.2\lib\net45\FSharp.Core.dll</HintPath>
     </Reference>
+    <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
