--- a/DeepLearningDemo.DigitRecognizer/packages.config
+++ b/DeepLearningDemo.DigitRecognizer/packages.config
@@ -7,6 +7,7 @@
   <package id="CNTK.Deps.OpenCV.Zip" version="2.5.1" targetFramework="net461" />
   <package id="CNTK.FSharp" version="0.1.5" targetFramework="net461" />
   <package id="CNTK.GPU" version="2.5.1" targetFramework="net461" />
+  <package id="FSharp.Core" version="4.6.2" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
   <package id="System.Reactive" version="4.0.0" targetFramework="net461" />
