--- a/DeepLearningDemo.MarioKart.NeuralNetwork/packages.config
+++ b/DeepLearningDemo.MarioKart.NeuralNetwork/packages.config
@@ -7,5 +7,6 @@
   <package id="CNTK.Deps.OpenCV.Zip" version="2.5.1" targetFramework="net461" />
   <package id="CNTK.FSharp" version="0.1.5" targetFramework="net461" />
   <package id="CNTK.GPU" version="2.5.1" targetFramework="net461" />
+  <package id="FSharp.Core" version="4.6.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
