--- a/DeepLearningDemo.MarioKart/packages.config
+++ b/DeepLearningDemo.MarioKart/packages.config
@@ -7,6 +7,7 @@
   <package id="CNTK.Deps.OpenCV.Zip" version="2.5.1" targetFramework="net461" />
   <package id="CNTK.FSharp" version="0.1.5" targetFramework="net461" />
   <package id="CNTK.GPU" version="2.5.1" targetFramework="net461" />
+  <package id="FSharp.Core" version="4.6.2" targetFramework="net461" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="InputSimulatorPlus" version="1.0.7" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
